...
            ),
            child: Row(
              children: [
                SvgPicture.asset("img/svg/guests.svg", package: "assets"),
                SizedBox(width: 8),
                Text(
                  "Number of Guests",
                  style: AppTextStyles(context).smallMedium,
                ),
                Spacer(),
                AnimatedSwitcher(
                  duration: Duration(milliseconds: 300),
                  transitionBuilder:
...
                  child: PrimaryButton(
                    bgColor: Colors.white,
                    frColor: Colors.black,
                    onTap: () async {
                      onPressed();
                    },
                    title: "Continue",
                  ),
                ),
              ],
            ),
          ],
        );
...
