...
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Padding(
          padding: const EdgeInsets.symmetric(horizontal: 16),
          child: Text(
            "Choose Your Access",
            style: AppTextStyles(
              context,
            ).secondaryBold.copyWith(fontWeight: FontWeight.w600),
          ),
        ),
        const SizedBox(height: 12),
...
        style: ElevatedButton.styleFrom(
          backgroundColor: Colors.white,
          foregroundColor: Colors.black,
        ),
        onPressed: onPressed,
        child: Text(
          "Add",
          style: TextStyle(
            color: AppColors.textInverse,
            fontSize: AppTextStyles(context).accumulator * 13,
          ),
        ),
      ),
...
